fix(clipping): fix clipping styles

--- a/src/components/clipping-item/clipping-item.css
+++ b/src/components/clipping-item/clipping-item.css
@@ -18,16 +18,6 @@
   min-height: 20rem;
 }
 
-.book-title {
-  font-size: 14px;
-  color: #333;
-}
-
-.book-content {
-  font-size: 16px;
-  color: #333;
-}
-
 @media (max-width: 768px) {
   .clipping {
     width: auto;
